--- a/.travis.yml
+++ b/.travis.yml
@@ -24,12 +24,13 @@ before_script:
   - composer --optimize-autoloader --no-interaction
 
 script:
-  - bin/phpunit -c . --coverage-clover=coverage.clover --coverage-html=./docs/coverage
+  - bin/phpunit -c . --coverage-clover=./build/logs/clover.xml --coverage-html=./docs/coverage
 
 after_script:
   # We upload only for reference platform! This is our base for further code analyses and so on.
   #- if [ $(phpenv version-name) == "5.6" ] && [ "$PREFER_LOWEST" == "--prefer-lowest" ]; then wget https://scrutinizer-ci.com/ocular.phar; fi
-  #- if [ $(phpenv version-name) == "5.6" ] && [ "$PREFER_LOWEST" == "--prefer-lowest" ]; then php ocular.phar code-coverage:upload --format=php-clover coverage.clover > /dev/null 2>&1; fi
+  #- if [ $(phpenv version-name) == "5.6" ] && [ "$PREFER_LOWEST" == "--prefer-lowest" ]; then php ocular.phar code-coverage:upload --format=php-clover build/logs/clover.xml > /dev/null 2>&1; fi
+  - if [ $(phpenv version-name) == "5.6" ] && [ "$PREFER_LOWEST" == "--prefer-lowest" ]; then CODECLIMATE_REPO_TOKEN="$CODECLIMATE_REPO_TOKEN" ./bin/test-reporter; fi
 
 after_success:
   # Push coverage to github pages branch
@@ -48,6 +49,10 @@ after_success:
 branches:
   except:
     - /^build-[0-9a-z\-]*/
+
+addons:
+    code_climate:
+        repo_token: $CODECLIMATE_REPO_TOKEN
 
 # Who to notify?
 notifications:
