--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,8 @@
   },
   "require-dev": {
     "phpunit/phpunit": "^5.6",
-    "symfony/var-dumper": "^2.8"
+    "symfony/var-dumper": "^3.1",
+    "codeclimate/php-test-reporter": "dev-master as 1.0.x-dev"
   },
   "autoload": {
     "psr-4": {
