--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -6,6 +6,11 @@ engines:
         - php
   phpcodesniffer:
     enabled: true
+    config:
+      file_extensions: "php,inc,lib"
+      standard: "PSR1,PSR2"
+      ignore_warnings: true
+      encoding: utf-8
   phpmd:
     enabled: true
   fixme:
