--- a/.travis.yml
+++ b/.travis.yml
@@ -30,6 +30,9 @@ after_script:
   # We upload only for reference platform! This is our base for further code analyses and so on.
   #- if [ $(phpenv version-name) == "5.6" ] && [ "$PREFER_LOWEST" == "--prefer-lowest" ]; then wget https://scrutinizer-ci.com/ocular.phar; fi
   #- if [ $(phpenv version-name) == "5.6" ] && [ "$PREFER_LOWEST" == "--prefer-lowest" ]; then php ocular.phar code-coverage:upload --format=php-clover build/logs/clover.xml > /dev/null 2>&1; fi
+  - pwd
+  - ls -d -1 $PWD/build/logs/*
+  - ls -d -1 $PWD/./build/logs/*
   - if [ $(phpenv version-name) == "5.6" ] && [ "$PREFER_LOWEST" == "--prefer-lowest" ]; then CODECLIMATE_REPO_TOKEN=$CODECLIMATE_TOKEN ./bin/test-reporter; fi
 
 after_success:
